# wgsd-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: demo.rs  main.rs  test.rs
hosts/: Cargo.toml
hosts/src/: lib.rs
netlink-request/: Cargo.toml
server/: Cargo.toml
server/examples/: demo.rs  sqlite.rs
server/src/: args.rs  handler.rs  main.rs  parser.rs
server/src/conf/: endpoint.rs  mod.rs  model.rs  models.rs  standard.rs
server/src/db/: mod.rs
server/src/model/: endpoint.rs  mod.rs  node.rs  prelude.rs
src/: args.rs  handler.rs  main.rs  parser.rs  wg.rs
src/conf/: endpoint.rs  mod.rs  model.rs  models.rs  util.rs
src/db/: mod.rs
src/db/model/: mod.rs  node_relay.rs  prelude.rs
src/model/: endpoint.rs  mod.rs
tests/: Cargo.toml
wg/: Cargo.toml
wg/examples/: create.rs  delete.rs  get.rs  list.rs  quickup.rs
wg/src/: key.rs
wg/src/backends/: kernel.rs  userspace.rs
wg/src/tools/: macos.rs  mod.rs  quick.rs
wgctl/: Cargo.toml  README.md
wgctl/examples/: create.rs  delete.rs  get.rs  list.rs  quickup.rs  time.rs
wgctl/src/: config.rs  device.rs  lib.rs  netlink_request.rs
wgctl/src/backends/: kernel.rs  mod.rs  userspace.rs
wgctl/src/tools/: linux.rs  macos.rs  mod.rs  quick.rs
wireguard-uapi/: Cargo.toml
wireguard-uapi/src/: config.rs  device.rs
wireguard-uapi/src/backends/: userspace.rs
wireguard-uapi/src/tools/: linux.rs  quick.rs
