[package]
name = "wgsdc"
version = "0.1.0"
edition = "2021"
description = "WireGuard configure the service discovery tool"
author = "<gngpp verticle@foxmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
ipnet = "2.5.1"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
sudo = "0.6.0"