[package]
name = "wg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
print = ["byte-unit/u128", "colored"]
tools = ["ipnet/default"]

[dependencies]
base64 = "0.21.0"
hex = "0.4.3"
libc = "0.2"
log = "0.4"
rand_core = { version = "0.6.4", features = ["getrandom"]}
curve25519-dalek = "3.2.1"
colored = { version = "2.0.0", optional = true }
ipnet = "2.4"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8"
netlink-packet-core = "0.5.0"
netlink-packet-generic = "0.3"
netlink-packet-route = "0.15.0"
netlink-packet-wireguard = "0.2"

[dependencies.byte-unit]
version = "*"
default-features = false
features = ["u128"]
